--- a/src/LorenzConsole/LorenzConsole.csproj
+++ b/src/LorenzConsole/LorenzConsole.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Baudot">
-      <HintPath>..\Baudot\Baudot.dll</HintPath>
+    <Reference Include="nl.gn.BaudotPortable">
+      <HintPath>..\..\lib\nl.gn.BaudotPortable\nl.gn.BaudotPortable.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
